# online_download_music

./: .gitignore  README.md  error_record.txt
fastapi/: main.py  (+1 more)
musicdl/: pyproject.toml  setup.py  运行.txt
musicdl/docs/: Changelog.md  Install.md  conf.py
musicdl/examples/musicdlgui/musicdl_outputs/KugouMusicClient/2026-03-07-10-30-34 Plug Me In/: search_results.pkl
musicdl/examples/musicdlgui/musicdl_outputs/KugouMusicClient/2026-03-07-10-32-56 尾戒/: search_results.pkl
musicdl/examples/musicdlgui/musicdl_outputs/KugouMusicClient/2026-03-07-10-35-49 Plug Me In/: search_results.pkl
musicdl/examples/musicdlgui/musicdl_outputs/KuwoMusicClient/2026-03-07-10-30-31 Plug Me In/: search_results.pkl
musicdl/examples/musicdlgui/musicdl_outputs/KuwoMusicClient/2026-03-07-10-32-37 尾戒/: search_results.pkl
musicdl/examples/musicdlgui/musicdl_outputs/KuwoMusicClient/2026-03-07-10-33-45 尾戒/: search_results.pkl
musicdl/examples/musicdlgui/musicdl_outputs/MiguMusicClient/2026-03-07-10-30-19 Plug Me In/: search_results.pkl
musicdl/examples/musicdlgui/musicdl_outputs/MiguMusicClient/2026-03-07-10-32-49 尾戒/: search_results.pkl
musicdl/musicdl/: __init__.py
musicdl/musicdl/modules/: __init__.py
musicdl/musicdl/modules/common/: __init__.py  myfreemp3.py
musicdl/musicdl/modules/sources/: bilibili.py  fivesong.py  joox.py  kuwo.py  migu.py  qianqian.py  qq.py  soda.py  zhuolin.py
musicdl/musicdl/modules/utils/: __init__.py  lanzouyparser.py  lyric.py  neteaseutils.py  qqutils.py  quarkparser.py  sodautils.py
musicdl/scripts/: build_cookies_for_tidal.py
(+20 files in other folders)
