[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "musicdl"
version = "2.9.7"
description = "Musicdl: A lightweight music downloader written in pure python"
readme = "README.md"
authors = [
    {name = "Zhenchao Jin", email = "charlesblwx@gmail.com"}
]
license = {text = "PolyForm-Noncommercial-1.0.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CharlesPikachu/musicdl"

[tool.setuptools]
package-data = {"musicdl" = ["modules/js/youtube/*.js"]}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}